[package]
name = "ballistic-calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2.0"
web-sys = { version = "0.3.64", features = ['HtmlInputElement'] }
wasm-bindgen = "0.2.87"
rapier3d = { version = "0.17.2", features = [ "simd-stable" ] }