[package]
name = "ballistic-calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.20.0"
yew-hooks = "0.2.0"
web-sys = { version = "0.3.64", features = ['HtmlInputElement'] }
wasm-bindgen = "0.2.87"
parry3d = "*"
nalgebra = "0.32.3"